--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <title>Test WebSite</title>
   </head>
   <body>
       <header>
@@ -123,8 +124,8 @@
               <div class="person-image">
                 <img src="img/Shape-2.png" alt="person">
               </div>
-              <h4 id="personName"></h4>
-              <h5 id="jobs"></h5>
+              <h4 id="personName">Name</h4>
+              <h5 id="jobs">Jobs</h5>
               <div class="sliderQuote">
                   <p id="sliderQuote"></p>
               </div>
